# olddodsrc

./: .gitignore  COMMENTARY.txt  DESIGN.txt  ISSUES.txt  README.md  README.txt  readme.txt
game/: .gitignore  BadMesh.cpp  BadMesh.h  Colour.h  FontRender.cpp  FontRender.h  GameConsts.h  GameMeshes.cpp  GameMeshes.h  GameTextures.cpp  GameTextures.h  Shader.cpp  Shader.h  Thing.cpp  TileIDs.h  assetloader.h  core.cpp  dodgame.cpp  game.cpp  geom.cpp  geom.h  graphics.cpp  graphics.h  makefile  oopgame.cpp  oopitem.h  ooplua.cpp  ooplua.h  ooptile.cpp  ooptile.h  oopworld.cpp  oopworld.h  stbi_image.h  test.cpp  test.js  ttycolours.h  util.cpp  util.h
game/TinyJS/: .gitignore  Makefile
game/core/: .gitignore  8x8font.h  BadMesh.cpp  BadMesh.h  FontRender.h  Shader.cpp  Thing.h  assetloader.cpp  core.cpp  core.h  geom.cpp  geom.h  graphics.cpp  makefile  stbi_image.cpp  util.cpp  util.h
game/data/: Default.frag  Default.vert  PreLit.frag  PreLit.vert  config.lua  frag.glsl  monkey.ply  vert.glsl
game/data/meshes/: bunny.ply  rocks.ply  sword.ply  torus.ply  wall.ply  well.coveredopen.ply
game/lua/: makefile
glfw3test/: CMakeLists.txt  linux_setup.sh  makefile
glfw3test/src/: anim.cpp  gbuffer.cpp  gbuffer.h  test.cpp  util.h
glfw3test/src/win32/: glhack.cpp  glhack.h
